ui-ngx/src/app/modules/home/components/home/version-card.component.scss
/**
 * Copyright © 2016-2026 The Thingsboard Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
@import 'constants';

:host {
  a {
    font-size: 0.9em;
    font-weight: 500;
    color: $tb-primary-color;
    cursor: pointer;
    text-decoration: none;
    border: none;
    white-space: nowrap;

    &:hover {
      color: unset;
    };
  }

  .mat-button {
    line-height: 26px !important;
  }

  .cards {
    display: flex;
    flex-direction: row;
    gap: 10px;

    .version-container {
      flex: 1;
      padding: 10px;
      border-radius: 10px;
      border: 1px solid #e0e0e0;
    }

    span {
      color: rgba(0,0,0,0.76);
      font-size: 1.25em;
      font-weight: 600;
    }

    .tb-title-link {
      font-style: normal;
      font-weight: 500;
      font-size: 0.9em;
      line-height: 1em;
      letter-spacing: 0.25px;
      color: rgba(0,0,0,0.54);
      position: relative;
      border-bottom: none;
      cursor: pointer;

      &:hover, &:focus {
        border-bottom: none;
      }
    }

    .tb-title-link-container {
      cursor: pointer;
      width: fit-content;
      white-space: nowrap;
      &::after {
        font-family: 'Material Icons';
        content: 'arrow_forward';
        display: inline-block;
        transform: rotate(315deg);
        font-weight: normal;
        font-style: normal;
        font-size: 18px;
        margin-left: 6px;
        color: rgba(0,0,0,0.12);
        vertical-align: bottom;
      }
      &:hover::after {
        color: rgba(0,0,0,0.54);
      }
    }

    .tb-title-no-updates {
      font-size: 14px;
      font-weight: 400;
      color: rgba(0, 0, 0, 0.38);
    }
  }

  @media #{$mat-lt-xl} {
    .title-container a {
      font-size: 0.9em;
    }

    .cards {
      span {
        font-size: 1em;
      }
      .tb-title-link {
        font-size: 0.9em;
        line-height: 1em;
      }
      .tb-title-link-container {
        &::after {
          font-size: 0.9em;
          line-height: 0.9em;
        }
      }
      .mat-raised-button {
        font-size: 0.9em;
      }
    }
  }

  @media #{$mat-xs} {
    .cards {
      .version-container {
        padding: 0.3125em;
      }
    }
  }
}

